// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render correctly with props 1`] = `
.emotion-0 {
  border: 1px solid #ccc;
  border-radius: 15px;
  padding: 10px;
  width: 100%;
  margin: 0 auto;
  display: block;
  box-sizing: border-box;
}

.emotion-0:focus {
  outline: none;
  border: 2px solid #06ba63;
}

<div>
  <input
    class="emotion-0"
    data-testid="input-element-test"
    placeholder="test"
    type="text"
    value="test"
  />
</div>
`;

exports[`Input should render correctly without props 1`] = `
.emotion-0 {
  border: 1px solid #ccc;
  border-radius: 15px;
  padding: 10px;
  width: 100%;
  margin: 0 auto;
  display: block;
  box-sizing: border-box;
}

.emotion-0:focus {
  outline: none;
  border: 2px solid #06ba63;
}

<div>
  <input
    class="emotion-0"
    data-testid="input-element-test"
    type="text"
  />
</div>
`;
